--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,19 @@
-{% extends 'base.html' %}
 
-{% block 'title' %}
-Login Form
-{% endblock 'title' %}
+
+{% extends 'base.html' %}
 
 
 {% block 'body' %}
-<div class="container-fluid">
-    <div class="row">
-        <form method="post" class="form" >
-                {% csrf_token %}
-                <table style="padding: 2px;">{{myform}}</table>
-                <input type="submit" value="Login">
-        </form>
+<h3>Login Form</h3>
+<form method="post">
+    {% csrf_token %}
+    <table>{{ myform }}</table>
+    <input type="submit" class="btn-primary" value="Login">
+</form>
 
-        <a href="{% url 'adduser' %}">New User , Register Now...</a>
-    </div>
-</div>
+<a href="{% url 'adduser' %}">New User, Register Here</a>
+
+<script>
+    document.getElementsByName("usertype")[0].setAttribute("hidden", "true")
+</script>
 {% endblock 'body' %}
